--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -24,7 +24,7 @@
                     <hr class="mt-5 mb-5">
 
                     <p class="text-center">
-                       Still don't have an account? <a href="">Sign up here</a>
+                       Still don't have an account? <a routerLink='/signup'>Sign up here</a>
                     </p>
 
                 </div>
