--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -41,7 +41,7 @@
             </div>
   
             <div class="d-flex justify-content-center mt-5">
-              <button type="submit" class="btn btn-danger mr-4">Cancel</button>
+              <button type="submit" class="btn btn-danger mr-4" routerLink="/signin">Cancel</button>
               <button type="submit" class="btn btn-primary">Sign up</button>
             </div>
   
