Signin and Signup API consumption

--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -7,18 +7,18 @@
 
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input class="form-control" type="text" name="username" id="username"
+                        <input [(ngModel)]="userLogin.username" class="form-control" type="text" name="username" id="username"
                             placeholder="Type your username">
                     </div>
 
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input class="form-control" type="password" name="password" id="password"
+                        <input [(ngModel)]="userLogin.password" class="form-control" type="password" name="password" id="password"
                             placeholder="Type your password">
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-primary">Sign in</button>
+                        <button (click)="signin()" type="submit" class="btn btn-primary">Sign in</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
