--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,21 +7,21 @@
     <div class="collapse navbar-collapse" id="suported-navbar">
       <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
-          <img src="https://randomuser.me/api/portraits/lego/7.jpg" alt="User image profile" width="50px" height="50px"
+          <img src="{{photo}}" alt="User image profile" width="50px" height="50px"
             class="img-fluid rounded-circle">
         </li>
         <li class="nav-item pl-3">
-          <p class="m-0 font-weight-bold text-white fs-16">Name</p>
+          <p class="m-0 font-weight-bold text-white fs-16">{{name}}</p>
         </li>
         <li>
-          <a class="btn btn-link btn-floating btn-lg text-light m-1" href="" role="button" data-mdb-ripple-color="dark">
+          <a class="btn btn-link btn-floating btn-lg text-light m-1" href="" role="button" data-mdb-ripple-color="dark" aria-hidden="true">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
           </a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto d-flex align-items-center">
         <li class="nav-item pl-3">
-          <a class="m-0 font-weight-bold text-white fs-16"><button type="button"
+          <a class="m-0 font-weight-bold text-white fs-16"><button (click)="signout()"
               class="btn btn-secondary">Sign out</button></a>
         </li>
       </ul>
