--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
       <ul class="navbar-nav ml-auto d-flex align-items-center">
         <li class="nav-item pl-3">
           <a class="m-0 font-weight-bold text-white fs-16"><button (click)="signout()"
-              class="btn btn-secondary">Sign out</button></a>
+              class="btn btn-light">Sign out</button></a>
         </li>
       </ul>
     </div>
