--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,7 +1,6 @@
 #img-bg {
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/22/Da_Vinci_Vitruve_Luc_Viatour.jpg");
+    background-image: url("https://imgur.com/QcCcRzf.gif");
     min-height: 750px;
-    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
