--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -1,7 +1,7 @@
 #img-bg {
     min-height: 660px;
 
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/22/Da_Vinci_Vitruve_Luc_Viatour.jpg");
+    background-image: url("https://i.imgur.com/fKfi76x.png");
 
     background-position: center;
     background-repeat: no-repeat;
