--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -25,15 +25,17 @@
               <input [(ngModel)]="user.imageUrl" class="form-control" type="text" name="photo-url" id="photo-url" placeholder="Your photo url">
             </div>
   
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input [(ngModel)]="user.password" class="form-control" type="password" name="password" id="password" placeholder="Your password">
-            </div>
-  
-            <div class="form-group">
-              <label for="confirmpassword">Confirm password</label>
-              <input (input)="confirmPassword($event)" class="form-control" type="password" name="confirmpassword" id="confirmpassword"
-                placeholder="Confirm your password">
+            <div class="form-group form-row">
+              <div class="col">
+                <label for="password">Password</label>
+                <input [(ngModel)]="user.password" class="form-control" type="password" name="password" id="password"
+                  placeholder="Your password">
+              </div>
+              <div div="col">
+                <label for="confirmpassword">Confirm password</label>
+                <input (input)="confirmPassword($event)" class="form-control" type="password" name="confirmpassword"
+                  id="confirmpassword" placeholder="Confirm your password">
+              </div>
             </div>
   
             <div class="form-group">
