Adding editing and deleting features to theme component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,7 +62,7 @@
             <textarea class="form-control" name="text" id="text" rows="3"></textarea>
           </div>
           <div class="form-group">
-            <label for="text">Choose a theme or <a data-dismiss="modal" routerLink="/theme">add a new one</a>:</label>
+            <label for="text">Choose a theme or <a data-dismiss="modal" routerLink="/themes">add a new one</a>:</label>
             <select class="form-control" name="theme" id="theme">
               <option value="">Themes</option>
             </select>
