--- a/src/app/theme/theme.component.html
+++ b/src/app/theme/theme.component.html
@@ -10,10 +10,10 @@
         <div class="row d-flex justify-content-center mt-4 mb-5">
           <div class="col-md-3">
             <div class="form-group">
-              <input type="text" class="form-control" id="description" placeholder="Theme name">
+              <input  [(ngModel)]="theme.description" type="text" class="form-control" id="description" placeholder="Theme name">
             </div>
             <div class="d-flex justify-content-center">
-              <button class="btn btn-light">Add</button>
+              <button class="btn btn-light" (click)="register()">Add</button>
             </div>
           </div>
         </div>
@@ -35,32 +35,29 @@
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Nickname</th>
+              <th scope="col">Description</th>
+              <th scope="col">Modifications</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td colspan="2">Larry the Bird</td>
-              <td>@twitter</td>
+            <tr *ngFor="let theme of themes">
+              <th>{{theme.id}}</th>
+              <td>{{theme.description}}</td>
+              <td class="d-flex justify-content-end">
+                <button 
+                [routerLink]="['/themes/edit/', theme.id]"
+                routerLinkActive="router-link-active" 
+                class="btn btn-info mr-3">Edit
+              </button>
+                <button 
+                [routerLink]="['/themes/delete/', theme.id]"
+                routerLinkActive="router-link-active" 
+                class="btn btn-danger">Delete
+              </button>
+              </td>
             </tr>
           </tbody>
         </table>
-  
       </div>
     </div>
   </div>
