--- a/src/app/user-edit/user-edit.component.html
+++ b/src/app/user-edit/user-edit.component.html
@@ -36,7 +36,7 @@
             <div class="form-group">
                 <label for="password">Password</label>
                 <input (input)='confirmPassword($event)' class="form-control" type="password" name="password"
-                    id="password" placeholder="Sua password">
+                    id="password" placeholder="Your password">
             </div>
 
             <div class="form-group">
@@ -46,9 +46,8 @@
             </div>
 
             <div class="form-group">
-                <label for="type">User type</label>
-                <select class="form-control" name="type" id="type" (change)='userType($event)'>
-                    <option>Select user type:</option>
+                <label for="type">Select user type:</label>
+                <select class="form-control" name="type" id="type" [(ngModel)]='user.type' (change)='userType($event)'>
                     <option value="normal">Normal</option>
                     <option value="adm">Admin</option>
                 </select>
