--- a/src/app/user-edit/user-edit.component.html
+++ b/src/app/user-edit/user-edit.component.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-danger mr-4" routerLink='/signin'>Cancel</button>
+                <button type="submit" class="btn btn-danger mr-4" routerLink='/home'>Cancel</button>
                 <button type="submit" class="btn btn-success" (click)='update()'>Update</button>
             </div>
 
