--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="card-columns" *ngIf='posts?.length != 0'>
-        <div class="card text-center" *ngFor='let post of posts'>
+        <div class="card text-center" *ngFor='let post of posts | orderBy : key : reverse'>
           <div class="card-body">
             <h5 class="card-title m-0">{{post.title}}</h5>
             <small class="text-muted"> Theme: {{post.theme.description}}</small>
@@ -85,7 +85,7 @@
     <div class="tab-pane fade" id="myposts" role="tabpanel" aria-labelledby="nav-myposts-tab">
 
       <div class="card-columns" *ngIf='user.posts?.length != 0'>
-        <div class="card text-center" *ngFor='let post of user.posts'>
+        <div class="card text-center" *ngFor='let post of user.posts | orderBy : key : reverse'>
           <div class="card-body">
             <h5 class="card-title m-0">{{post.title}}</h5>
             <small class="text-muted"> Theme: {{post.theme.description}}</small>
@@ -120,7 +120,7 @@
 
 
       <div class="card-columns" *ngFor='let theme of themes'>
-        <div class="card text-center" *ngFor='let post of theme.posts'>
+        <div class="card text-center" *ngFor='let post of theme.posts | orderBy : key : reverse'>
           <div class="card-body">
             <h5 class="card-title m-0">{{post.title}}</h5>
             <p class="card-text mt-3">{{post.content}}</p>
