--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -166,7 +166,7 @@
           <textarea [(ngModel)]='post.content' class="form-control" name="text" id="text" rows="3"></textarea>
         </div>
         <div class="form-group">
-          <label for="text">Choose a theme or <a data-dismiss="modal" routerLink="/themes">add a new one</a>:</label>
+          <label for="text">Choose a theme or, if you are an administrator, <a data-dismiss="modal" routerLink="/themes">add a new one</a>:</label>
           <select class="form-control" name="theme" id="theme" [(ngModel)]='idTheme' (change)='findByIdTheme()'>
             <option *ngFor='let theme of themes' value="{{theme.id}}">
               {{theme.description}}
