--- a/src/app/user-edit/user-edit.component.html
+++ b/src/app/user-edit/user-edit.component.html
@@ -49,7 +49,7 @@
                 <label for="type">Select user type:</label>
                 <select class="form-control" name="type" id="type" [(ngModel)]='user.type' (change)='userType($event)'>
                     <option value="normal">Normal</option>
-                    <option value="adm">Admin</option>
+                    <option value="admin">Admin</option>
                 </select>
             </div>
 
